@@ -37,16 +37,16 @@ REPL:
 - close all predefined methods in repl.js and jscalc.js
 
 Optimization ideas:
-- 64-bit atoms in 64-bit mode ?
+- use 64 bit JSValue in 64 bit mode
+- use JSValue as atoms and use a specific constant pool in functions to
+  reference atoms from the bytecode
 - reuse stack slots for disjoint scopes, if strip
 - add heuristic to avoid some cycles in closures
-- small String (0-2 charcodes) with immediate storage
+- small String (1 codepoint) with immediate storage
 - perform static string concatenation at compile time
-- optimize string concatenation with ropes or miniropes?
 - add implicit numeric strings for Uint32 numbers?
 - optimize `s += a + b`, `s += a.b` and similar simple expressions
 - ensure string canonical representation and optimise comparisons and hashes?
-- remove JSObject.first_weak_ref, use bit+context based hashed array for weak references
 - property access optimization on the global object, functions,
   prototypes and special non extensible objects.
 - create object literals with the correct length by backpatching length argument
