@@ -8,12 +8,12 @@ version=`cat VERSION`
 if [ "$1" = "-h" ] ; then
     echo "release.sh [release_list]"
     echo ""
-    echo "release_list: extras binary win_binary quickjs"
+    echo "release_list: extras binary win_binary cosmo_binary quickjs"
 
     exit 1
 fi
 
-release_list="extras binary win_binary quickjs"
+release_list="extras binary win_binary cosmo_binary quickjs"
 
 if [ "$1" != "" ] ; then
     release_list="$1"
@@ -53,7 +53,10 @@ outdir="/tmp/${d}"
 rm -rf $outdir
 mkdir -p $outdir
 
-make CONFIG_WIN32=y qjs.exe
+make clean
+make CONFIG_WIN32=y clean
+
+make CONFIG_WIN32=y CONFIG_LTO=y qjs.exe
 cp qjs.exe $outdir
 ${cross_prefix}strip $outdir/qjs.exe
 cp $dlldir/libwinpthread-1.dll $outdir
@@ -75,7 +78,7 @@ mkdir -p $outdir
 make clean
 make CONFIG_WIN32=y clean
 
-make CONFIG_WIN32=y CONFIG_M32=y qjs.exe
+make CONFIG_WIN32=y CONFIG_M32=y CONFIG_LTO=y qjs.exe
 cp qjs.exe $outdir
 ${cross_prefix}strip $outdir/qjs.exe
 cp $dlldir/libwinpthread-1.dll $outdir
@@ -91,9 +94,8 @@ if echo $release_list | grep -w -q binary ; then
 
 make clean
 make CONFIG_WIN32=y clean
-make -j4 qjs run-test262
-make -j4 CONFIG_M32=y qjs32 run-test262-32
-strip qjs run-test262 qjs32 run-test262-32
+make -j4 CONFIG_LTO=y qjs run-test262
+strip qjs run-test262
 
 d="quickjs-linux-x86_64-${version}"
 outdir="/tmp/${d}"
@@ -105,14 +107,39 @@ cp qjs run-test262 $outdir
 
 ( cd /tmp/$d && rm -f ../${d}.zip && zip -r ../${d}.zip . )
 
+make clean
+make -j4 CONFIG_LTO=y CONFIG_M32=y qjs run-test262
+strip qjs run-test262
+
 d="quickjs-linux-i686-${version}"
 outdir="/tmp/${d}"
 
 rm -rf $outdir
 mkdir -p $outdir
 
-cp qjs32 $outdir/qjs
-cp run-test262-32 $outdir/run-test262
+cp qjs run-test262 $outdir
+
+( cd /tmp/$d && rm -f ../${d}.zip && zip -r ../${d}.zip . )
+
+fi
+
+#################################################"
+# Cosmopolitan binary release
+
+if echo $release_list | grep -w -q cosmo_binary ; then
+
+export PATH=$PATH:$HOME/cosmocc/bin
+
+d="quickjs-cosmo-${version}"
+outdir="/tmp/${d}"
+
+rm -rf $outdir
+mkdir -p $outdir
+
+make clean
+make CONFIG_COSMO=y -j4 qjs run-test262
+cp qjs run-test262 $outdir
+cp readme-cosmo.txt $outdir/readme.txt
 
 ( cd /tmp/$d && rm -f ../${d}.zip && zip -r ../${d}.zip . )
 
@@ -133,13 +160,13 @@ mkdir -p $outdir $outdir/doc $outdir/tests $outdir/examples
 
 cp Makefile VERSION TODO Changelog readme.txt LICENSE \
    release.sh unicode_download.sh \
-   qjs.c qjsc.c qjscalc.js repl.js \
+   qjs.c qjsc.c repl.js \
    quickjs.c quickjs.h quickjs-atom.h \
    quickjs-libc.c quickjs-libc.h quickjs-opcode.h \
    cutils.c cutils.h list.h \
    libregexp.c libregexp.h libregexp-opcode.h \
    libunicode.c libunicode.h libunicode-table.h \
-   libbf.c libbf.h \
+   dtoa.c dtoa.h \
    unicode_gen.c unicode_gen_def.h \
    run-test262.c test262o.conf test262.conf \
    test262o_errors.txt test262_errors.txt \
@@ -150,7 +177,6 @@ cp tests/*.js tests/*.patch tests/bjson.c $outdir/tests
 cp examples/*.js examples/*.c $outdir/examples
 
 cp doc/quickjs.texi doc/quickjs.pdf doc/quickjs.html \
-   doc/jsbignum.texi doc/jsbignum.html doc/jsbignum.pdf \
    $outdir/doc
 
 ( cd /tmp && tar Jcvf /tmp/${d}.tar.xz ${d} )
